--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -8,13 +8,13 @@ on:
 
     branches:
 
-      - branch2
+      - master
 
   pull_request:
 
     branches:
 
-      - branch2
+      - master
 
  
 
