--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -49,6 +49,7 @@ jobs:
       run: |
 
         python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools[distutils]
 
         pip install -r requirements.txt
 
